--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
   <section class="main-container">
     <div class="illustration-container"></div>
-    <div></div>
+    <div class="text-container">   
+         <h1 class="title-card">Order Summary</h1>     
+          <p class="subtitle-card">You can now listen to millions of songs, audiobooks, and podcasts on any
+            device anywhere you like!</p>
+    </div>
+    <div class="value-container"></div>
+    <button class="button-card">Proceed to Payment</button>
+    <p class="text-cancel">Cancel Order</p>
   </section>
 
   
