--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
           <p class="subtitle-card">You can now listen to millions of songs, audiobooks, and podcasts on any
             device anywhere you like!</p>
     </div>
-    <div class="value-container"></div>
+
+
+    <div class="value-container">
+      <div><img class="icon-music" src="images/icon-music.svg" alt="icon-music"></div>
+      <div class="plan-container"><p class="name-plan">Annual Plan</p> <p class="price-plan">$59.99/year</p></h1></div>
+      <div><p class="tochange">Change</p></div>
+    </div>
+
+
+
+
     <button class="button-card">Proceed to Payment</button>
     <p class="text-cancel">Cancel Order</p>
-  </section>
-
-  
+  </section> 
   
  
 </body>
